--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="portfolio, Sajib, sajibzportfolio, myportfolio, sajibmsc, sajibzportfolio, activeportfolio">
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/sajib-profile.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/83bd7509c5.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
