--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-one">Hello, My name is</div>
-                <div class="text-two">.</div>
+                <div class="text-two">Mohammad Sajib Hossen</div>
                 <div class="text-three">And I'am a <span class="typing"></span></div>
                 <a href="#">Hire Me</a>
             </div>
