--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="column right">
                     <div class="text-one">I'm Sajib and I'm a <span class="typing-two"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dignissimos beatae vel, perferendis consequatur ullam libero maiores quidem possimus officiis harum quo ab itaque, repellat ipsum blanditiis amet fuga numquam molestias mollitia labore deleniti in? Incidunt saepe eum veniam, provident voluptatum nihil doloremque dicta illo iusto ad fugiat a minima iure nulla dolorum unde nesciunt aliquam, quasi excepturi dolorem? Repellendus nesciunt minus ipsum quia est. Sapiente a quasi porro quo, debitis dicta. Voluptas, dignissimos saepe doloribus vel asperiores, at accusamus officiis necessitatibus hic soluta optio ratione cupiditate voluptates sit ullam commodi mollitia error incidunt. Fugit neque dolores similique aliquid magni.</p>
-                    <a href="sajib-cv.pdf">Download CV</a>
+                    <a href="bio/sajib-cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
