Change title home from Sajib Hossen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="120">
     <meta name="keywords" content="portfolio, Sajib, sajibzportfolio, myportfolio, sajibmsc, sajibzportfolio, activeportfolio">
-    <title>Home</title>
+    <title>Sajib Hossen</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/sajib-profile.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/83bd7509c5.js"></script>
